--- a/pom.xml
+++ b/pom.xml
@@ -14,4 +14,8 @@
         <maven.compiler.source>11</maven.compiler.source>
     </properties>
 
+    <modules>
+        <module>config-server</module>
+    </modules>
+
 </project>
