--- a/config-server/pom.xml
+++ b/config-server/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>config-server</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>config-server</name>
-    <description>Demo project for Spring Boot</description>
+    <description>service that service configuration for other services</description>
 
     <properties>
         <java.version>11</java.version>
