--- a/service-registry/src/main/resources/bootstrap.yml
+++ b/service-registry/src/main/resources/bootstrap.yml
@@ -1,9 +1,9 @@
 spring:
   application:
-    name: service-registry
+    name: service-registry # name of service
   cloud:
     config:
-      uri: http://localhost:8888/
-      fail-fast: true
+      uri: http://localhost:8888/ # url of config-service
+      fail-fast: true # fails if cannot connect to config-service
   profiles:
-    active: eureka
+    active: eureka # active profiles
