--- a/authentication/src/main/resources/bootstrap.yml
+++ b/authentication/src/main/resources/bootstrap.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: api-gateway # name of service
+    name: authentication-service # name of service
   cloud:
     config:
       uri: http://localhost:8888/ # url of config-service
