added debug level logging to spring security

--- a/authentication-service/src/main/resources/bootstrap.yml
+++ b/authentication-service/src/main/resources/bootstrap.yml
@@ -8,3 +8,9 @@ spring:
       name: authentication-service, jwt-security
   profiles:
     active: test # active profiles
+
+logging:
+  level:
+    org:
+      springframework:
+        security: DEBUG
