--- a/authentication-service/src/main/resources/bootstrap.yml
+++ b/authentication-service/src/main/resources/bootstrap.yml
@@ -5,9 +5,9 @@ spring:
     config:
       uri: http://localhost:8888/ # url of config-service
       fail-fast: true # fails if cannot connect to config-service
-      name: authentication-service, jwt-security
+      name: authentication-service,  service-registry-client, jwt-security
   profiles:
-    active: test # active profiles
+    active: test, eureka # active profiles
 
 logging:
   level:
