disabled eureka self preservation mode

--- a/service-registry/src/main/resources/bootstrap.yml
+++ b/service-registry/src/main/resources/bootstrap.yml
@@ -7,3 +7,7 @@ spring:
       fail-fast: true # fails if cannot connect to config-service
   profiles:
     active: eureka # active profiles
+
+eureka:
+  server:
+    enable-self-preservation: false
