refactored UserCredentials and added unit test UserCredentialsTest

--- a/authentication-service/src/main/resources/bootstrap.yml
+++ b/authentication-service/src/main/resources/bootstrap.yml
@@ -8,6 +8,9 @@ spring:
       name: authentication-service,  service-registry-client, jwt-security
   profiles:
     active: test, eureka # active profiles
+  h2:
+    console:
+      enabled: true
 
 logging:
   level:
