--- a/authentication-service/src/test/resources/bootstrap.yml
+++ b/authentication-service/src/test/resources/bootstrap.yml
@@ -4,9 +4,12 @@ spring:
   h2:
     console:
       enabled: true
+  cloud:
+    config:
+      enabled: false # disable Spring Cloud Config for tests
 
-logging:
-  level:
-    org:
-      springframework:
-        security: DEBUG
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*" # expose all actuator endpoints
