--- a/authentication-service/src/main/resources/bootstrap.yml
+++ b/authentication-service/src/main/resources/bootstrap.yml
@@ -5,7 +5,7 @@ spring:
     config:
       uri: http://localhost:8888/ # url of config-service
       fail-fast: true # fails if cannot connect to config-service
-      name: authentication-service,  service-registry-client, jwt-security
+      name: authentication-service,  service-registry-client, jwt-security # what properties files to load
   profiles:
     active: test, eureka # active profiles
   h2:
