--- a/notes-service/pom.xml
+++ b/notes-service/pom.xml
@@ -2,22 +2,17 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.4.1</version>
-		<relativePath/> <!-- lookup parent from repository -->
-	</parent>
-	<groupId>com.github.DenPeshkov</groupId>
+
 	<artifactId>notes-service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>notes-service</name>
 	<description>Service for notes managing</description>
 
-	<properties>
-		<java.version>11</java.version>
-		<spring-cloud.version>2020.0.0</spring-cloud.version>
-	</properties>
+	<parent>
+		<artifactId>collaborative-notes-app-backend</artifactId>
+		<groupId>com.github.DenPeshkov</groupId>
+		<version>1.0-SNAPSHOT</version>
+	</parent>
 
 	<dependencies>
 		<dependency>
@@ -35,6 +30,18 @@
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+
+		<!--Swagger-->
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-boot-starter</artifactId>
 		</dependency>
 
 		<dependency>
