--- a/authentication-service/pom.xml
+++ b/authentication-service/pom.xml
@@ -18,8 +18,8 @@
         <!--commons-->
         <dependency>
             <groupId>com.github.DenPeshkov</groupId>
-            <artifactId>commons</artifactId>
-            <version>1.0</version>
+            <artifactId>collaborative-notes-app-backend-commons</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
 
         <!--configuration processor-->
