--- a/notes-service/src/main/resources/bootstrap.yml
+++ b/notes-service/src/main/resources/bootstrap.yml
@@ -5,7 +5,7 @@ spring:
     config:
       uri: http://localhost:8888/ # url of config-service
       fail-fast: true # fails if cannot connect to config-service
-      name: notes-service, service-registry-client, jwt-security # what properties files to load
+      name: notes-service, service-registry-client, jwt-security, h2 # what properties files to load
   h2:
     console:
       enabled: true
